cmake_minimum_required(VERSION 3.14)
project(test C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(libft)
include_directories(libftprintf)

add_executable(test
        check/main.c
        includes/get_next_line.h
        includes/libft.h
        includes/libftprintf.h
        includes/push_swap.h
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_itoa.c
        libft/ft_list_find.c
        libft/ft_list_foreach_if.c
        libft/ft_list_push_back.c
        libft/ft_list_reverse.c
        libft/ft_lstadd.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strrev.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/libft.h
        libftprintf/ft_atoi.c
        libftprintf/ft_atoi_base.c
        libftprintf/ft_check.c
        libftprintf/ft_check_2.c
        libftprintf/ft_conditions.c
        libftprintf/ft_cpy.c
        libftprintf/ft_flag_funcs.c
        libftprintf/ft_info.c
        libftprintf/ft_isdigit.c
        libftprintf/ft_longarifm.c
        libftprintf/ft_longarifm_2.c
        libftprintf/ft_longarifm_3.c
        libftprintf/ft_memalloc.c
        libftprintf/ft_memset.c
        libftprintf/ft_pows.c
        libftprintf/ft_printf.c
        libftprintf/ft_printf_del.c
        libftprintf/ft_printf_list_func.c
        libftprintf/ft_printf_list_func_2.c
        libftprintf/ft_put_adress.c
        libftprintf/ft_put_float.c
        libftprintf/ft_put_int.c
        libftprintf/ft_put_unsigned.c
        libftprintf/ft_putchar.c
        libftprintf/ft_putnbr.c
        libftprintf/ft_putstr.c
        libftprintf/ft_return_flags.c
        libftprintf/ft_return_num.c
        libftprintf/ft_round_dioux.c
        libftprintf/ft_strdup.c
        libftprintf/ft_strjoin.c
        libftprintf/ft_strlen.c
        libftprintf/ft_strnew.c
        libftprintf/ft_strrev.c
        libftprintf/ft_strupper.c
        libftprintf/libftprintf.h
        src/check.c
        src/do_print.c
        src/get_next_line.c
        src/is_valid.c
        src/len_search.c
        src/list_del.c
        src/max_search.c
        src/median_search.c
        src/new_struct.c
        src/normes.c
        src/print_func.c
        src/push_swap.c
        src/sort_3_elem.c
        src/sort_3_elem2.c
        src/sort_check.c
        src/sort_conditions.c
        src/sort_funcs.c
        src/spr.c
        src/store_list.c
        swap_push/swap_push.c)
